# wuvorbis

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  WuVorbisMainUnit.cpp  detect_cpu.cpp  tvpsnd.h
.github/workflows/: ci-krkrsdl2.yml
src_list/: includes.txt  includes_module.txt  sources.txt  sources_module.txt
vorbis/lib/: block.c  codebook.c  mapping0.c  mdct.c  vorbisfile.c
x64/ogg/include/ogg/: config_types.h
x64/ogg/src/: bitwise.c
